--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <title>YouTube</title>
 </head>
+
 <body>
+  <p>TEST</p>
   <div class="navbar">
     <div class="logo">
       <i class="material-icons">view_headline</i>
