--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>YouTube</title>
 </head>
 <body>
+  <p>SOMETHING ELSE</p>
   <div class="navbar">
     <div class="logo">
       <i class="material-icons">view_headline</i>
